@@ -1,5 +1,7 @@
 package com.cya.springaopdemo.proxy;
 
+import net.sf.cglib.proxy.Enhancer;
+
 import java.lang.reflect.Proxy;
 
 /**
@@ -16,11 +18,16 @@ public class Main {
 ////        houseSubject.saleHouse();
 //        houseSubject.rentHouse();
         HouseSubject target=new RealHouseSubject();
-        HouseSubject proxy= (HouseSubject) Proxy.newProxyInstance(
-                target.getClass().getClassLoader(),
-                new Class[]{HouseSubject.class},
-                new JDKInvocationHandler(target)
-        );
+//    动态代理    jdk
+//        HouseSubject proxy= (HouseSubject) Proxy.newProxyInstance(
+//                target.getClass().getClassLoader(),
+//                new Class[]{HouseSubject.class},
+//                new JDKInvocationHandler(target)
+//        );
+//        proxy.rentHouse();
+
+//动态代理CGLib  --add-opens java.base/java.lang=ALL-UNNAMED
+        RealHouseSubject proxy= (RealHouseSubject) Enhancer.create(target.getClass(),new CGLIBInterceptor(target));
         proxy.rentHouse();
     }
 }
